--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "Celine Valentine",
