modified backend package json

--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "surge": "REACT_APP_BASE_URL=https://nteract-games.herokuapp.com npm run build && cp build/index.html build/200.html && surge build nteract-games.surge.sh && echo https://nteract-games.surge.sh"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
