--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "server",
+  "name": "nteract-games",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node" : "v14.15.1",
-    "npm" : "7.6.0"
+    "node": "v14.15.1",
+    "npm": "7.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "Celine Valentine",
