--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "*",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "*",
     "jsonschema": "^1.4.0",
     "pg": "^8.5.1"
   }
