--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
     "jsonschema": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
   }
 }
