--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "4.17.1",
+    "express": "^4.17.1",
+    "express-openid-connect": "^2.2.1",
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
